2004-06-17  Yann Hodique  <Yann.Hodique@lifl.fr>

	* patches.el (message): added advice to disable messages when using the minibuffer
